correctly pulling parks list from parse

--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
   "dependencies": {
     "backbone": "^1.2.3",
     "jquery": "^2.1.4",
-    "normalize": "^0.3.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
-    "skeleton": "^0.1.2"
+    "skeleton-css": "^2.0.4"
   }
 }
