--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   },
   "dependencies": {
     "backbone": "^1.2.3",
+    "font-awesome": "^4.4.0",
     "gulp-prompt": "^0.1.2",
     "gulp-rimraf": "^0.2.0",
     "jquery": "^2.1.4",
     "materialize-css": "^0.97.1",
     "minimist": "^1.2.0",
     "moment": "^2.10.6",
+    "moment-range": "^2.0.3",
     "react": "^0.14.0",
     "react-calendar-pane": "0.0.20",
-    "react-daterange-picker": "^0.12.1",
+    "react-daterange-picker": "git://github.com/onefinestay/react-daterange-picker#5c0b4a80b3b3d31658d1aed1e7c1cd923a0f52e2",
     "react-dom": "^0.14.0",
     "skeleton-css": "^2.0.4"
   }
